# tempCode

./: .gitignore  CMakeLists.txt  README.md  file_io.md  main.c  main.cpp
6.S081/lec02/: pointers.c
apue/: CMakeLists.txt
apue/chapter01/: CMakeLists.txt  simshell.c
apue/chapter02/: open_max.h
apue/chapter03/: CMakeLists.txt  test1_lseek.c  test2_O_APPEND.c  test3_offset_of_two_fd.c  test4_fcntl.c  test5_set_clr_fl.c  test_exercise_3_2.cpp  test_exercise_3_6.c
apue/chapter04/: CMakeLists.txt  test1_file_type.c  test3_umask.c  test4_chmod.c
apue/chapter05/: test2_buffer_status.c  test3_tmpnam_tmpfile.c  test4_mkstemp.c
apue/chapter06/: CMakeLists.txt  test4_mem_stream.c
apue/include/: CMakeLists.txt  apue.h
chapter01/: mycp.c  mycp_std.c  myls.c
chapter02/: CMakeLists.txt  conf.c  path_alloc.h
chapter03/: CMakeLists.txt  test2_O_APPEND.c  test2_file_hole.c  test3_offset_of_two_fd.c  test_OPENMAX.c
chapter04/: CMakeLists.txt  test2_access.c  test5_unlink.c  test6_futimens.c  test7_getcwd.c  test8_st_dev.c  test9_traverse.c
chapter05/: CMakeLists.txt  test1_get_put_char.c  test5_memstream.c  test_buf_free.c
chapter06/: CMakeLists.txt  test1_stdio.c  test2_read_line.c  test3_buffer_info.c
cpp_primer/ch12_dynamic_memory/: StrBlog.h  auto_release_shared_ptr.cpp  file_query.cpp  make_shared.cpp
csapp/ch07_linking/: bar5.c  foo5.c  main.c  prog  sum.c  sum.i  sum.s
csapp/ch07_linking/static_linking/: addvec.c  main.c  mulvec.c  vector.h
csapp/ch10_system_io/: rio.c  rio.h  test_stat.c
csapp/ch11_network_programming/: Makefile  dd2hex.c  echo_client.c  echo_server.c  hex2dd.c  home.html  hostinfo.c  tiny_server.c  util.c  util.h
csapp/ch11_network_programming/cgi-bin/: adder.c
csapp/ch12_concurrency/: Makefile  echo_server_concurrency.c  pthread_hello.c
csapp/file_io/: rio.c  test_exer10.c  test_fd.c  test_fstat.c  test_read_write.c  test_readdir.c  test_rio.c  test_stdio.c
include/: apue.c  apue.h
linux_cmd/: CMakeLists.txt
linux_cmd/cp/: CMakeLists.txt  cp.c
linux_cmd/ls/: CMakeLists.txt  README.md  list_file.cpp  ls.cpp
linux_cmd/pwd/: CMakeLists.txt
linux_cmd/sh/: CMakeLists.txt  main.c  sh.c  sh.h  varlib.c  varlib.h
linux_cmd/who/: CMakeLists.txt  utmplib.h  who.c
modern_cpp_wuyongwei/lec01/: shape.cpp  stack_unwinding.cpp
modern_cpp_wuyongwei/lec02/: Makefile  smart_ptr_shared.cpp  smart_ptr_unique.cpp
modern_cpp_wuyongwei/lec03/: Makefile  lifetime1.cpp  lifetime2.cpp  lref_rref.cpp  return_move.cpp
modern_cpp_wuyongwei/lec04/: test_list.cpp  test_string.cpp  test_vector.cpp
modern_cpp_wuyongwei/lec05/: test_array.cpp  test_hash.cpp  test_priority_queue.cpp  test_set_map.cpp  test_unordered.cpp
os_nju/ch01/: a.S  a.c  b.c  hello-goodbye.c  minimal.S  try_open.c
python_demo/: marching_squares.py  python_freq.py  python_plot.py  sys_argv.py  test_socket.py
test/: CMakeLists.txt  test.py  test_big_memory.c  test_fork_fd.c  test_gdb.c  test_gdb_vector.cpp  test_initializer_list1.cpp  test_leetcode.cpp  test_mod.cpp  test_multiprocess_write.c  test_new_pointer.cpp  test_priority_queue.cpp  test_range_for_of_defined_type.cpp  test_tmp.cpp
test/test_jjhou/: CMakeLists.txt  main.cpp
test/test_jjhou/test_variadic_template/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp
tmp/: test.c  test_c_array.c  test_initializer_list.cpp  test_next_perm.cpp
uulp/: CMakeLists.txt
uulp/ch02/: CMakeLists.txt
uulp/ch03/: CMakeLists.txt
uulp/ch03/ls/: list_file.h  ls.c
uulp/ch04/: CMakeLists.txt
uulp/ch04/pwd/: pwd.cpp
uulp/ch05/: CMakeLists.txt  echostate.c  setecho.c  showtty.c
uulp/ch06/: CMakeLists.txt  play_again.c  rotate.c  sigdemo1.c  sigdemo2.c
uulp/ch08/: CMakeLists.txt  forkdemo1.c  forkdemo2.c  forkdemo3.c  waitdemo1.c
uulp/ch09/: CMakeLists.txt  changeenv.c  showenv.c  test_getenv.c
uulp/ch10/: CMakeLists.txt  pipe.c  pipedemo.c  stdin_reader1.c  stdin_reader2.c  whotofile.c
uulp/ch11/: CMakeLists.txt  popendemo.c  timesever.c  tinybc.c
